2013-04-10  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Fix permissions on documentation files.

2013-04-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix path to other documentations.

	* doc/Makefile.am,
	* doc/header.html,
	* doc/mainpage.dox: Here.

2013-03-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Add a missing dependency.

2013-03-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Allow tarballs with long filenames.

2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Configure scribo/src/contest/hnla-2013 and
	scribo/src/contest/hbr-2013.

2013-03-21  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/doc.bib: Add a reference to an article.

2013-03-21  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/doc.bib: Fix a reference name.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve common documentation.

	* doc/Doxyfile.in: Fix include path in documentation.

	* doc/doc.bib: Add new references.

2013-03-13  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove references to external directory.

	* configure.ac,
	* Makefile.am: Here.

2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve look'n feel of general documentation.

	* doc/Doxyfile.in: Make use of bibliography.

	* doc/bibliography.dox: Add references.

	* doc/DoxygenLayout.xml,
	* doc/doc.css,
	* doc/doxygen.css,
	* doc/footer.html,
	* doc/header.html,
	* doc/subdoc_footer.html: Improve rendering.

2012-02-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix links and location of documentation.

	* doc/Makefile.am,
	* doc/header.html,
	* doc/mainpage.dox: Fix paths and disable the use of installdox
	(deprecated)

	* doc/doxygen.css,
	* doc/footer.html: Fix footer.

2012-01-30  Guillaume Lazzara  <z@lrde.epita.fr>

	* build-aux/texi2dvi: Fix Dash incompatibility.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve main documentation.

	* doc/Makefile.am: Update dependencies.

	* doc/about.dox,
	* doc/doxygen.css,
	* doc/license.dox,