@@ -25,7 +25,7 @@ $extrastylesheet
  <tbody>
  <tr style="height: 56px;">
   <!--BEGIN PROJECT_LOGO-->
-  <td id="projectlogo"><a href="@relcommondocpath@doc/@userrefman@/html/index.html"><img alt="Logo" src="$relpath$$projectlogo"/></a></td>
+  <td id="projectlogo"><a href="$relpath$@relcommondocpath@@userrefman@/html/index.html"><img alt="Logo" src="$relpath$$projectlogo"/></a></td>
   <!--END PROJECT_LOGO-->
   <!--BEGIN PROJECT_NAME-->
   <td style="padding-left: 0.5em;">
